[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iov-power-channel"
version = "0.1.0"
description = "Joint power and channel control for 5G/NR IoV with proposed and baseline agents."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
